# OpenFanController

./: .gitignore  404.html  Dockerfile  README.md  index.html  search.html  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci_docs.yaml  docker_image.yaml  pylint.yaml  stale.yaml
Documentation/: README.md
Documentation/docs-html/: index.html  sitemap.xml
Documentation/src/: mkdocs.yml  requirements.txt
Enclosure/: Enclosure_OpenFAN_Bottom.stl  Enclosure_OpenFAN_Top.stl  Fusion360_OpenFAN_Enclosure.f3z
Enclosure/Rev1/: Enclosure_OpenFAN_Bottom.stl  Enclosure_OpenFAN_Top.stl  Fusion360_OpenFAN_Enclosure.f3z
Enclosure/Rev2_by_Joe_Dutson/: New_V7_Bottom.stl  New_V7_PCB.stl
Enclosure/Rev2_by_Sam_Chan/: Bottom-PCB-Enclosure_by_Sam_Chan.3mf  Top-PCB-Enclosure_by_Sam_Chan.3mf
Firmware/: README.md
Firmware/Release Binaries/: 2023-09-29_OpenFAN_FW_01.uf2
Firmware/src/: CMakeLists.txt
Firmware/src/Application/: board.h  emc230x.c  emc230x.h  fan_control.c  fan_control.h  host_communication.c  host_communication.h  main.c  tusb_config.h  usb-descriptors.c  usb_cdc.c  usb_cdc.h
Firmware/src/Lib/Logger/: logger.c  logger.h
Hardware/Altium_Source_Files/: 01_Top.SchDoc  02_Power.SchDoc  03_MCU.SchDoc  04_FAN_DRIVER.SchDoc  05_FAN_CONNECTORS.SchDoc  06_SENSORS.SchDoc  MFGOutput.OutJob  OpenFAN_PC_PI.PrjPcb  OpenFAN_PC_PI.PrjPcbStructure
Software/: README.md  start.sh
Software/Python/: FanCommander.py  base_logger.py  config.py  config.yaml  pylintrc  requirements.txt  serial_driver.py  webserver.py
api/: index.html
search/: search_index.json
(+54 files in other folders)
